css/tomorrow.css
/* General */
:root.tomorrow .dialog {
  background-color: #282A2E;
  border-color: #111;
}
:root.tomorrow .field:focus {
  border-color: #000;
}

/* Header */
:root.tomorrow #header-bar {
  font-size: 9pt;
  color: #C5C8C6;
}
:root.tomorrow #header-bar a {
  color: #81A2BE;
}

/* Quote */
:root.tomorrow .backlink.deadlink {
  color: #81A2BE !important;
}
:root.tomorrow .inline {
  border-color: #111;
  background-color: rgba(0, 0, 0, .14);
}

/* QR */
.tomorrow #dump-list::-webkit-scrollbar-thumb {
  background-color: #282A2E;
  border-color: #111;
}
:root.tomorrow .qrpreview {
  background-color: rgba(255, 255, 255, .15);
}

/* Menu */
:root.tomorrow .entry {
  border-bottom: 1px solid #111;
}
:root.tomorrow .focused.entry {
  background: rgba(0, 0, 0, .33);
}

